trunk/Archive2/fc/e9455a90bc9e35/output
main.cpp:13:5: error: no matching function for call to 'fread'
    fread(buffer, 1, buffer.size(), f);
    ^~~~~
/usr/include/stdio.h:706:15: note: candidate function not viable: no known conversion from 'string' (aka 'basic_string<char>') to 'void *restrict' for 1st argument; take the address of the argument with &
extern size_t fread (void *__restrict __ptr, size_t __size,
              ^
1 error generated.
